# revengate-new

./: .gitignore  Actor.gd  Actor.tscn  BoardBuilder.gd  CODE_OF_CONDUCT.md  COPYING.txt  CREDITS.md  Hero.gd  Hero.tscn  Main.gd  Main.tscn  Monster.gd  Monster.tscn  PRIVACY.md  Pipfile  README.md  Rand.gd  RevBoard.gd  RevBoard.tscn  Strategy.gd  TileMap.tscn  Tracking.gd  TurnQueue.gd  TurnQueue.tscn  V.gd  buildozer.spec  credits.txt  default_env.tres  export_presets.cfg.in  guix.scm  loose-ends.md  main.py  manifest.scm  project.godot  pyproject.toml  requirement-dev.in  requirement-dev.txt  requirements-dev.in  requirements-dev.txt  requirements.in  (+7 more)
assets/: background.xcf  launch-icon.png.import  lyon-map-1855.png.import  rooms.json  sample-floor.png.import  splash-screen.png.import  tile-atlas.png.import
doc/: Makefile
docs/: actor-states.dot  anim-states.dot  deps.dot  dev-notes.md  developing.md  gestures.md  godot-dev.md  kivy-dev.md  releasing.md  style.md  ux-painpoints.md
revengate/: .loader.py.kate-swp  __init__.py  action_map.py  actors.py  apparatus.py  area.py  combat_defs.py  commands.py  demo.kv  dialogue.py  effects.py  engine.py  events.py  factions.py  forms.kv  forms.py  gen_map.py  geometry.py  governor.py  graphics.py  items.py  loader.py  maps.py  memory.py  messages.py  monsters.py  randutils.py  revengate.kv  sentiment.py  simulator.py  stats_screen.kv  strategies.py  tags.py  tender.py  ui.py  uidefs.py  utils.py  weapons.py  word_salad.py
src/: anim_group.gd  board_builder.gd  card_rule.gd  command_pack.gd  constants.gd  deck.gd  (+52 more)
(+581 files in other folders)
