[build-system]
requires = ["flit_core >=3.6,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "revengate"
dynamic = ["description", "version"]
license = {file="COPYING.txt"}
classifiers = [
    "Private :: Do Not Upload", 
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[project.scripts]
revcli = "revengate.apparatus:main"
